--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,5 @@
 # Created by https://www.gitignore.io
 
-### OSX ###
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Icon must end with two \r
-Icon
-
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
 
 ### Sass ###
 .sass-cache
@@ -36,4 +9,5 @@ Temporary Items
 ### CodeKit ###
 # General CodeKit files to ignore
 config.codekit
+codekit3.config
 /min
